--- a/index.html
+++ b/index.html
@@ -111,11 +111,10 @@
                <!-- Footer with social media icons-->
         <div class="row social-row">
             <div class="col-12 col-sm-12 col-md-6 col-lg-5 col-xl-4 social-col">
-                    <a href="https://www.tiktok.com/@newbanke?"><i class="fa-brands fa-tiktok"></i></a>
-                    <a href="https://newbanke.bandcamp.com/"><i class="fa-brands fa-bandcamp"></i></a>
+                    <a href="https://smiling.bandcamp.com/"><i class="fa-brands fa-bandcamp"></i></a>
                     <a href="https://open.spotify.com/artist/6A5Ke0SSBAKmZedJGmAM6e?si=7NnZNFPyRNafw1FJH477TQ&dl_branch=1"><i class="fa-brands fa-spotify"></i></a>
                     <a href="https://www.youtube.com/watch?v=oisWaZ0IZzo"><i class="fa-brands fa-youtube"></i></a>
-                    <a href="https://www.facebook.com/NewBankeOfficial/"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://instagram.com/smiling"><i class="fa-brands fa-instagram"></i></a>
             </div>
             <div class="col-0 col-sm-0 col-md-6 col-lg-7 col-xl-8"></div>
         </div>
