modify social media links

--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
                <!-- Footer with social media icons-->
         <div class="row social-row">
             <div class="col-12 col-sm-12 col-md-6 col-lg-5 col-xl-4 social-col">
-                    <a href="https://smiling.bandcamp.com/"><i class="fa-brands fa-bandcamp"></i></a>
-                    <a href="https://open.spotify.com/artist/6A5Ke0SSBAKmZedJGmAM6e?si=7NnZNFPyRNafw1FJH477TQ&dl_branch=1"><i class="fa-brands fa-spotify"></i></a>
-                    <a href="https://www.youtube.com/watch?v=oisWaZ0IZzo"><i class="fa-brands fa-youtube"></i></a>
-                    <a href="https://instagram.com/smiling"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://smilingband.bandcamp.com"><i class="fa-brands fa-bandcamp"></i></a>
+                    <a href="https://open.spotify.com/artist/34BkXAF5rjf1eKCFzO66a5?si=-qXU5jNuSgWnaGl4mJIVKw"><i class="fa-brands fa-spotify"></i></a>
+                    <a href="https://youtu.be/hjX7uLExC28?si=NcaDHAwYEVRHnZJL"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="https://www.instagram.com/smiling_band/"><i class="fa-brands fa-instagram"></i></a>
             </div>
             <div class="col-0 col-sm-0 col-md-6 col-lg-7 col-xl-8"></div>
         </div>
