--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="facebook-domain-verification" content="ntk63r3hbias0vimjtwqqncjma2c2h" />
-    <title>NewBanke</title>
+    <title>Smiling</title>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://kit.fontawesome.com/e840042faa.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -30,7 +30,7 @@
 <body>
 <section class="showcase">
     <video playsinline muted loop autoplay>
-        <source type="video/mp4" src=#>
+        <source type="video/mp4" src="video/promotest.mp4">
     </video>
     <div class="underlay"></div>
     <div class="overlay"></div>
@@ -44,7 +44,7 @@
                 </div>
                 <div class="col-2 col-sm-2 col-md-2 col-lg-2 col-xl-2 toggle-col">
                     <div class="toggle">
-                        <i onclick="changeIcon(this)" class="fa-solid fa-bars"></i>
+                        <!-- <i onclick="changeIcon(this)" class="fa-solid fa-bars"></i> -->
                     </div>
                 </div>
             </div>
