--- a/qr.html
+++ b/qr.html
@@ -38,7 +38,7 @@
             <!-- Header and menu button -->
             <div class="row header-row">
                 <div class="col-7 col-sm-7 col-md-6 col-lg-4 col-xl-4 logo-col">
-                    <h2 class="logo"><a href="index.html">Smiling</a></h2>
+                    <h2 class="logo"><a href="index.html">Smilingggggg</a></h2>
                 </div>
                 <div class="col-3 col-sm-3 col-md-4 col-lg-6 col-xl-6">
                 </div>
