--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
 <section class="showcase">
     <video playsinline muted loop autoplay>
-        <source type="video/mp4" src="video/promotest.mp4">
+        <source type="video/mp4" src="video/Smiling backdroppromo vert 1.mp4">
     </video>
     <div class="underlay"></div>
     <div class="overlay"></div>
@@ -38,7 +38,7 @@
             <!-- Header and menu button -->
             <div class="row header-row">
                 <div class="col-7 col-sm-7 col-md-6 col-lg-4 col-xl-4 logo-col">
-                    <h2 class="logo"><a href="index.html">Smiling</a></h2>
+                    <h2 class="logo"><a href="index.html"></a>8/12 på DUNK</h2>
                 </div>
                 <div class="col-3 col-sm-3 col-md-4 col-lg-6 col-xl-6">
                 </div>
