replace video, lower resolution

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
 <section class="showcase">
     <video playsinline muted loop autoplay>
-        <source type="video/mp4" src="video/Smiling backdroppromo vert 1.mp4">
+        <source type="video/mp4" src="video/smiling backdroppromo vert 3.mp4">
     </video>
     <div class="underlay"></div>
     <div class="overlay"></div>
