change font and text formatting

--- a/qr.html
+++ b/qr.html
@@ -30,19 +30,24 @@
 <body>
 <section class="showcase">
     <video playsinline muted loop autoplay>
-        <source type="video/mp4" src="video/promotest.mp4">
+        <source type="video/mp4" src="video/smiling backdroppromo vert 3.mp4">
     </video>
     <div class="underlay"></div>
     <div class="overlay"></div>
     <div class="container-fluid">
             <!-- Header and menu button -->
             <div class="row header-row">
-                <div class="col-7 col-sm-7 col-md-6 col-lg-4 col-xl-4 logo-col">
-                    <h2 class="logo"><a href="index.html">Smilingggggg</a></h2>
+                <div class="col-2 col-sm-2 col-md-2 col-lg-4 col-xl-4 logo-col">
                 </div>
-                <div class="col-3 col-sm-3 col-md-4 col-lg-6 col-xl-6">
+                <div class="col-8 col-sm-8 col-md-8 col-lg-4 col-xl-4">
+                    <h2 class="logo">Smiling + 
+                        <br>
+                        Magnus Skaug
+                        <br>
+                        8/12 på Dunk
+                    </h2>
                 </div>
-                <div class="col-2 col-sm-2 col-md-2 col-lg-2 col-xl-2 toggle-col">
+                <div class="col-2 col-sm-2 col-md-2 col-lg-4 col-xl-4 toggle-col">
                     <div class="toggle">
                         <!-- <i onclick="changeIcon(this)" class="fa-solid fa-bars"></i> -->
                     </div>
