--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
 <section class="showcase">
-    <video playsinline muted loop autoplay>
+    <video playsinline loop autoplay>
         <source type="video/mp4" src="video/smiling backdroppromo vert 3.mp4">
     </video>
     <div class="underlay"></div>
