--- a/qr.html
+++ b/qr.html
@@ -29,12 +29,12 @@
 </head>
 <body>
 <section class="showcase">
-    <video id="myVideo" playsinline loop>
+    <video playsinline muted loop autoplay>
         <source type="video/mp4" src="video/smiling backdroppromo vert 3.mp4">
     </video>
     <button id="playButton">Play Video</button>
 
-<script>
+<!-- <script>
   window.onload = function() {
     var video = document.getElementById("myVideo");
     var playButton = document.getElementById("playButton");
@@ -47,7 +47,7 @@
       });
     });
   };
-</script>
+</script> -->
     <div class="underlay"></div>
     <div class="overlay"></div>
     <div class="container-fluid">
@@ -55,22 +55,33 @@
             <div class="row header-row">
                 <div class="col-1 col-sm-1 col-md-3 col-lg-3 col-xl-4">
                 </div>
-                <div class="col-10 col-sm-10 col-md-6 col-lg-6 col-xl-4">
-                    <h2 class="logo">
-                        <a href="https://www.facebook.com/events/726881209341027">
+                <div class="col-10 col-sm-10 col-md-6 col-lg-6 col-xl-4 event-col">
+                    <h2 class="eventTitle">
                             Smiling + 
                             <br>
                             Magnus Skaug
                             <br>
                             8/12 på Dunk
-                        </a>
                     </h2>
-                    <div class="smartLinks-col">
+                    <div class="smartLinks">
                         <a id="spotifyLink" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickSpotify');" href="https://tikkio.com/tickets/43327-smiling-magnus-skaug?fbclid=IwAR3xR8xsXoYcVDt5dHdyKSFbd-fSYfY2si4gzkRtuasrf-wiym91c6HIhIk"> 
                             <span class="hyperDspLink hyperShadow">
                                 <div class="linkBox"> 
                                     <div class="streamingServiceTitle">
                                         Tickets
+                                    </div>
+                                    <div class="arrow">
+                                        <i class="fa fa-caret-right" aria-hidden="true"></i>
+                                    </div>
+                                </div>
+                            </span>
+                            <div class="hiddenElementToFixWhatsCalledBorderCollapse"></div>
+                        </a> 
+                        <a id="spotifyLink" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickSpotify');" href="https://www.facebook.com/events/726881209341027">   
+                            <span class="hyperDspLink hyperShadow">
+                                <div class="linkBox"> 
+                                    <div class="streamingServiceTitle">
+                                        Facebook Event
                                     </div>
                                     <div class="arrow">
                                         <i class="fa fa-caret-right" aria-hidden="true"></i>
