--- a/qr.html
+++ b/qr.html
@@ -41,14 +41,10 @@
                 </div>
                 <div class="col-10 col-sm-10 col-md-6 col-lg-6 col-xl-4 event-col">
                     <h2 class="eventTitle">
-                            Smiling + 
-                            <br>
-                            Magnus Skaug
-                            <br>
-                            8/12 på Dunk
+                            Smiling<br><br>Malmö 13/3 <br> Oslo 14/3 <br> Trondheim 15/3 <br><br>Malmö<br>&darr;
                     </h2>
                     <div class="smartLinks">
-                        <a id="spotifyLink" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickSpotify');" href="https://tikkio.com/tickets/43327-smiling-magnus-skaug?fbclid=IwAR3xR8xsXoYcVDt5dHdyKSFbd-fSYfY2si4gzkRtuasrf-wiym91c6HIhIk"> 
+                        <a id="spotifyLink" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickSpotify');" href="https://secure.tickster.com/sv/n7194ba5uccacy4/products"> 
                             <span class="hyperDspLink hyperShadow">
                                 <div class="linkBox"> 
                                     <div class="streamingServiceTitle">
@@ -61,7 +57,7 @@
                             </span>
                             <div class="hiddenElementToFixWhatsCalledBorderCollapse"></div>
                         </a> 
-                        <a id="spotifyLink" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickSpotify');" href="https://www.facebook.com/events/726881209341027">   
+                        <a id="spotifyLink" onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickSpotify');" href="https://www.facebook.com/events/1673920873136520">   
                             <span class="hyperDspLink hyperShadow">
                                 <div class="linkBox"> 
                                     <div class="streamingServiceTitle">
